Fixing the equilibriation bug

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5eb7110f",
    "metadata": {},
    "outputs": [],
@@ -13,15 +13,25 @@
     "using Statistics;               # Let's get this fucking bread \n",
     "using DataFrames;               # For succinct data manipulation\n",
     "using CSV;                      # For writing the data to prevent constant re-running\n",
-    "using ForwardDiff;              # For profiling the gradients\n",
-    "using Optim;                    # For the equilibriation optimisation "
+    "using ForwardDiff;              # For profiling the gradients "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bin"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Takes time series data and calculates the average of each year.\n",
@@ -39,9 +49,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "read_hd5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Reads the flux (amounts), production (projection) and reserviour contents from \n",
@@ -64,9 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "run_solver"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Passed a solver function runs the solver and returns the speed and binned data\n",
@@ -86,9 +118,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "profile_solvers"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Takes a list of solvers as an input and runs a multithreaded comparison that \n",
@@ -154,9 +197,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "UndefVarError: u0 not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: u0 not defined",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[6]:17",
+      " [2] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1116"
+     ]
+    }
+   ],
    "source": [
     "TO, P = read_hd5(\"Guttler14.hd5\");      # Reading the data into the scope \n",
     "\n",
@@ -174,28 +234,38 @@
     "    params[5] * exp(- (params[6] * (t - 775)) ^ 16);        # Super Gaussian event\n",
     "derivative(x, params, t) = vec(TO * x - production(t, params) * P);  # The derivative of the system \n",
     "\n",
+    "u0 = TO \\ - params[1] * P;  # Equilibriating the system\n",
+    "\n",
     "burnproblem = ODEProblem(derivative, u0, (-360.0, 760.0), params); # Burn in problem  \n",
     "burnsolution = solve(burnproblem, reltol=1e-6).u[end];             # Running the model and returning final position\n",
     "\n",
-    "# local solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23,\n",
-    "#     ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5,\n",
-    "#     TanYam7, Vern6];\n",
-    "# profiles = profile_solvers(solvers, derivative, position, params); # Running the first batch of solvers \n",
+    "solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23,\n",
+    "    ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5,\n",
+    "    TanYam7, Vern6];\n",
+    "profiles = profile_solvers(solvers, derivative, position, params); # Running the solvers \n",
     "\n",
-    "# if isfile(\"solver_profiles.csv\");                           # Checking for the .csv file \n",
-    "#     CSV.write(\"solver_profiles.csv\", profiles, append=true);# Adding new solvers to the CSV\n",
-    "# else \n",
-    "#     CSV.write(\"solver_profiles.csv\", profiles, append=false);# Creating the file if it does not exist \n",
-    "# end\n",
+    "if isfile(\"solver_profiles.csv\");                           # Checking for the .csv file \n",
+    "    CSV.write(\"solver_profiles.csv\", profiles, append=true);# Adding new solvers to the CSV\n",
+    "else \n",
+    "    CSV.write(\"solver_profiles.csv\", profiles, append=false);# Creating the file if it does not exist \n",
+    "end\n",
     "\n",
     "#= Foward and Reverse Autodiff =#\n",
-    "profile_gradients(BS3(), derivative, position, params, u0); #? Confusing position reversal\n"
+    "# profile_gradients(BS3(), derivative, position, params, u0); #? Confusing position reversal\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Julia 1.6.3",
+   "language": "julia",
+   "name": "julia-1.6"
+  },
   "language_info": {
-   "name": "python"
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.6.3"
   },
   "orig_nbformat": 4
  },
