Changing scales to log

--- a/plotter.ipynb
+++ b/plotter.ipynb
@@ -3522,34 +3522,9 @@
     "    ymax=r.accuracy + r.accuracy_var,   # Y upper error bar\n",
     "    xmin=r.time_mean - r.time_var,  # X lower error bar\n",
     "    xmax=r.time_mean + r.time_var,  # X upper error bar\n",
-    "    Geom.yerrorbar, Geom.xerrorbar, Geom.point, Geom.label)  # Geometries  "
+    "    Geom.yerrorbar, Geom.xerrorbar, Geom.point, Geom.label, # Geometries \n",
+    "    Scale.log)  # Setting log scales "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "e76c94a9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Plot(...)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "369938d9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
