Initial log plot of the accuracy data

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "profile_solvers"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,8 @@
     "        t_var[index] = var(time_sample[2:end]);     # Storing time error\n",
     "    end \n",
     "\n",
-    "    C14 = abs((C14' .- median(C14, dims=1)')');     # Calculating deviations from median \n",
+    "    C14 = (C14' .- median(C14, dims=1)')';   # Calculating deviations from median \n",
+    "    C14 = @.abs(C14);   # Absolute value \n",
     "    results.accuracy = vec(mean(C14, dims=2));      # Calculating the mean of the deviation from the median \n",
     "    results.accuracy_var = vec(var(C14, dims=2));   # Calculating the RMSE error << is better \n",
     "    results.time_mean = t_mean;                     # Storing the mean run time\n",
@@ -197,23 +198,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "UndefVarError: u0 not defined",
+     "evalue": "MethodError: no method matching median(::Float64; dims=1)\n\u001b[0mClosest candidates are:\n\u001b[0m  median(::Any) at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.6/Statistics/src/Statistics.jl:836\u001b[91m got unsupported keyword argument \"dims\"\u001b[39m\n\u001b[0m  median(\u001b[91m::Distributions.Cosine\u001b[39m) at /home/jordan/.julia/packages/Distributions/cdiMy/src/univariate/continuous/cosine.jl:49\u001b[91m got unsupported keyword argument \"dims\"\u001b[39m\n\u001b[0m  median(\u001b[91m::Distributions.VonMises\u001b[39m) at /home/jordan/.julia/packages/Distributions/cdiMy/src/univariate/continuous/vonmises.jl:55\u001b[91m got unsupported keyword argument \"dims\"\u001b[39m\n\u001b[0m  ...",
      "output_type": "error",
      "traceback": [
-      "UndefVarError: u0 not defined",
+      "MethodError: no method matching median(::Float64; dims=1)\n\u001b[0mClosest candidates are:\n\u001b[0m  median(::Any) at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.6/Statistics/src/Statistics.jl:836\u001b[91m got unsupported keyword argument \"dims\"\u001b[39m\n\u001b[0m  median(\u001b[91m::Distributions.Cosine\u001b[39m) at /home/jordan/.julia/packages/Distributions/cdiMy/src/univariate/continuous/cosine.jl:49\u001b[91m got unsupported keyword argument \"dims\"\u001b[39m\n\u001b[0m  median(\u001b[91m::Distributions.VonMises\u001b[39m) at /home/jordan/.julia/packages/Distributions/cdiMy/src/univariate/continuous/vonmises.jl:55\u001b[91m got unsupported keyword argument \"dims\"\u001b[39m\n\u001b[0m  ...",
       "",
       "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[6]:17",
-      " [2] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1116"
+      "  [1] (::Base.Broadcast.var\"#31#32\"{Base.Iterators.Pairs{Symbol, Int64, Tuple{Symbol}, NamedTuple{(:dims,), Tuple{Int64}}}, typeof(median)})(args::Float64)",
+      "    @ Base.Broadcast ./broadcast.jl:1297",
+      "  [2] _broadcast_getindex_evalf",
+      "    @ ./broadcast.jl:648 [inlined]",
+      "  [3] _broadcast_getindex",
+      "    @ ./broadcast.jl:621 [inlined]",
+      "  [4] getindex",
+      "    @ ./broadcast.jl:575 [inlined]",
+      "  [5] copy",
+      "    @ ./broadcast.jl:922 [inlined]",
+      "  [6] materialize",
+      "    @ ./broadcast.jl:883 [inlined]",
+      "  [7] profile_solvers(solvers::Vector{Type}, ∇::Function, u0::Vector{Float64}, p::Vector{Float64})",
+      "    @ Main ./In[13]:27",
+      "  [8] top-level scope",
+      "    @ In[14]:25",
+      "  [9] eval",
+      "    @ ./boot.jl:360 [inlined]",
+      " [10] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "    @ Base ./loading.jl:1116"
      ]
     }
    ],
@@ -234,7 +249,7 @@
     "    params[5] * exp(- (params[6] * (t - 775)) ^ 16);        # Super Gaussian event\n",
     "derivative(x, params, t) = vec(TO * x - production(t, params) * P);  # The derivative of the system \n",
     "\n",
-    "u0 = TO \\ - params[1] * P;  # Equilibriating the system\n",
+    "u0 = TO \\ (- params[1] * P);  # Equilibriating the system\n",
     "\n",
     "burnproblem = ODEProblem(derivative, u0, (-360.0, 760.0), params); # Burn in problem  \n",
     "burnsolution = solve(burnproblem, reltol=1e-6).u[end];             # Running the model and returning final position\n",
@@ -242,7 +257,7 @@
     "solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23,\n",
     "    ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5,\n",
     "    TanYam7, Vern6];\n",
-    "profiles = profile_solvers(solvers, derivative, position, params); # Running the solvers \n",
+    "profiles = profile_solvers(solvers, derivative, burnsolution, params); # Running the solvers \n",
     "\n",
     "if isfile(\"solver_profiles.csv\");                           # Checking for the .csv file \n",
     "    CSV.write(\"solver_profiles.csv\", profiles, append=true);# Adding new solvers to the CSV\n",
