Planning ForwardDiff implementation

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "bin"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "read_hd5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "run_solver"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "profile_solvers"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,10 +170,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "So basically I need to have a program that takes the parameters of the production function as an input and which can then be differntiated with respect to those parameters. In the middle of this the solver runs but I do not need to pass the autodiff through the solver. My problem is that variables are in the wrong scope. I need to have them inside the function but do not want to pass them as variables. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "profile_gradients"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Calculates the gradient using a χ² loss function. \n",
@@ -198,37 +216,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "MethodError: no method matching median(::Float64; dims=1)\n\u001b[0mClosest candidates are:\n\u001b[0m  median(::Any) at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.6/Statistics/src/Statistics.jl:836\u001b[91m got unsupported keyword argument \"dims\"\u001b[39m\n\u001b[0m  median(\u001b[91m::Distributions.Cosine\u001b[39m) at /home/jordan/.julia/packages/Distributions/cdiMy/src/univariate/continuous/cosine.jl:49\u001b[91m got unsupported keyword argument \"dims\"\u001b[39m\n\u001b[0m  median(\u001b[91m::Distributions.VonMises\u001b[39m) at /home/jordan/.julia/packages/Distributions/cdiMy/src/univariate/continuous/vonmises.jl:55\u001b[91m got unsupported keyword argument \"dims\"\u001b[39m\n\u001b[0m  ...",
+     "evalue": "UndefVarError: read_hd5 not defined",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching median(::Float64; dims=1)\n\u001b[0mClosest candidates are:\n\u001b[0m  median(::Any) at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.6/Statistics/src/Statistics.jl:836\u001b[91m got unsupported keyword argument \"dims\"\u001b[39m\n\u001b[0m  median(\u001b[91m::Distributions.Cosine\u001b[39m) at /home/jordan/.julia/packages/Distributions/cdiMy/src/univariate/continuous/cosine.jl:49\u001b[91m got unsupported keyword argument \"dims\"\u001b[39m\n\u001b[0m  median(\u001b[91m::Distributions.VonMises\u001b[39m) at /home/jordan/.julia/packages/Distributions/cdiMy/src/univariate/continuous/vonmises.jl:55\u001b[91m got unsupported keyword argument \"dims\"\u001b[39m\n\u001b[0m  ...",
+      "UndefVarError: read_hd5 not defined",
       "",
       "Stacktrace:",
-      "  [1] (::Base.Broadcast.var\"#31#32\"{Base.Iterators.Pairs{Symbol, Int64, Tuple{Symbol}, NamedTuple{(:dims,), Tuple{Int64}}}, typeof(median)})(args::Float64)",
-      "    @ Base.Broadcast ./broadcast.jl:1297",
-      "  [2] _broadcast_getindex_evalf",
-      "    @ ./broadcast.jl:648 [inlined]",
-      "  [3] _broadcast_getindex",
-      "    @ ./broadcast.jl:621 [inlined]",
-      "  [4] getindex",
-      "    @ ./broadcast.jl:575 [inlined]",
-      "  [5] copy",
-      "    @ ./broadcast.jl:922 [inlined]",
-      "  [6] materialize",
-      "    @ ./broadcast.jl:883 [inlined]",
-      "  [7] profile_solvers(solvers::Vector{Type}, ∇::Function, u0::Vector{Float64}, p::Vector{Float64})",
-      "    @ Main ./In[13]:27",
-      "  [8] top-level scope",
-      "    @ In[14]:25",
-      "  [9] eval",
-      "    @ ./boot.jl:360 [inlined]",
-      " [10] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "    @ Base ./loading.jl:1116"
+      " [1] top-level scope",
+      "   @ In[4]:1",
+      " [2] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1116"
      ]
     }
    ],
