Attempted forward diff implementation. Solver not included

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "5eb7110f",
    "metadata": {},
    "outputs": [],
@@ -173,45 +173,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So basically I need to have a program that takes the parameters of the production function as an input and which can then be differntiated with respect to those parameters. In the middle of this the solver runs but I do not need to pass the autodiff through the solver. My problem is that variables are in the wrong scope. I need to have them inside the function but do not want to pass them as variables. "
+    "So basically I need to have a program that takes the parameters of the production function as an input and which can then be differntiated with respect to those parameters. In the middle of this the solver runs but I do not need to pass the autodiff through the solver. My problem is that variables are in the wrong scope. I need to have them inside the function but do not want to pass them as variables. \n",
+    "\n",
+    "I am not sure why the solver needs to be included within the scope of the `profile_gradients` function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "profile_gradients"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "UndefVarError: params not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: params not defined",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[16]:12",
+      " [2] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1116"
+     ]
     }
    ],
    "source": [
     "\"\"\"\n",
     "Calculates the gradient using a χ² loss function. \n",
     "\"\"\"\n",
-    "function profile_gradients(solver, ∇::Function, u0::Vector{Float64},\n",
-    "        parameters::Vector{Float64}, steady_state::Vector{Float64})  \n",
-    "    \n",
-    "    local solution = run_solver(solver, ∇, u0, parameters);         #! need consistent naming conventions for parameters\n",
-    "    local ΔC14 = (solution .- steady_state[2]) ./ steady_state[2] .* 1000; # Calculating the modelled DC14\n",
-    "\n",
-    "    local miyake = DataFrame(CSV.File(\"Miyake12.csv\"));                     # Reading the Miyake data\n",
-    "    local χ² = sum(((miyake.d14c .- ΔC14[1:28]) ./ miyake.sig_d14c) .^ 2);  # calculating a χ² statistic\n",
+    "function profile_gradients(parameters::Vector{Float64})  \n",
+    "    local solution = run_solver(BS3, ∇, u0, parameters);                    #! Inconsistent naming\n",
+    "    local ΔC14 = (solution .- steady_state[2]) ./ steady_state[2] .* 1000;  # Calculating ΔC14\n",
+    "    local miyake = DataFrame(CSV.File(\"Miyake12.csv\"));                     # Reading Miyake data\n",
+    "    local χ² = sum(((miyake.d14c .- ΔC14[1:28]) ./ miyake.sig_d14c) .^ 2);  # Calculating χ² \n",
     "    return -0.5 * χ²\n",
+    "end\n",
     "\n",
+    "ForwardDiff.gradient(profile_gradients, params); # Running the forward diff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following is assorted segments that have been constructed to improve the flow without deleting code. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "    #? For generating the test plot I have the following things \n",
     "    # plot(layer(x=miyake.year, y=miyake.d14c, Geom.point),\n",
     "    #     layer(x=miyake.year, y=ΔC14[1:28], Geom.line));\n",
-    "    #! I need to resume from the testing here\n",
-    "\n",
-    "end"
+    "    #! I need to resume from the testing here"
    ]
   },
   {
