Improving the namespace structure in the jupyter kernel

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -180,50 +180,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: params not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: params not defined",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[16]:12",
-      " [2] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1116"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "Calculates the gradient using a χ² loss function. \n",
-    "\"\"\"\n",
-    "function profile_gradients(parameters::Vector{Float64})  \n",
-    "    local solution = run_solver(BS3, ∇, u0, parameters);                    #! Inconsistent naming\n",
-    "    local ΔC14 = (solution .- steady_state[2]) ./ steady_state[2] .* 1000;  # Calculating ΔC14\n",
-    "    local miyake = DataFrame(CSV.File(\"Miyake12.csv\"));                     # Reading Miyake data\n",
-    "    local χ² = sum(((miyake.d14c .- ΔC14[1:28]) ./ miyake.sig_d14c) .^ 2);  # Calculating χ² \n",
-    "    return -0.5 * χ²\n",
-    "end\n",
-    "\n",
-    "ForwardDiff.gradient(profile_gradients, params); # Running the forward diff"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The following is assorted segments that have been constructed to improve the flow without deleting code. "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -278,6 +234,33 @@
     "burnproblem = ODEProblem(derivative, u0, (-360.0, 760.0), params); # Burn in problem  \n",
     "burnsolution = solve(burnproblem, reltol=1e-6).u[end];             # Running the model and returning final position\n",
     "\n",
+    "\"\"\"\n",
+    "Calculates the gradient using a χ² loss function. \n",
+    "\"\"\"\n",
+    "function profile_gradients(parameters::Vector{Float64})  \n",
+    "    local solution = run_solver(BS3, ∇, u0, parameters);                    #! Inconsistent naming\n",
+    "    local ΔC14 = (solution .- steady_state[2]) ./ steady_state[2] .* 1000;  # Calculating ΔC14\n",
+    "    local miyake = DataFrame(CSV.File(\"Miyake12.csv\"));                     # Reading Miyake data\n",
+    "    local χ² = sum(((miyake.d14c .- ΔC14[1:28]) ./ miyake.sig_d14c) .^ 2);  # Calculating χ² \n",
+    "    return -0.5 * χ²\n",
+    "end\n",
+    "\n",
+    "ForwardDiff.gradient(profile_gradients, params); # Running the forward diff\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Profiling the solvers by running each solver over the 30 year period surrounding the Miyake event. Saving the data to a file upon completion. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23,\n",
     "    ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5,\n",
     "    TanYam7, Vern6];\n",
@@ -287,10 +270,7 @@
     "    CSV.write(\"solver_profiles.csv\", profiles, append=true);# Adding new solvers to the CSV\n",
     "else \n",
     "    CSV.write(\"solver_profiles.csv\", profiles, append=false);# Creating the file if it does not exist \n",
-    "end\n",
-    "\n",
-    "#= Foward and Reverse Autodiff =#\n",
-    "# profile_gradients(BS3(), derivative, position, params, u0); #? Confusing position reversal\n"
+    "end"
    ]
   }
  ],
